# soccer-match-forecast

./: .gitignore  PROJECT_STRUCTURE.md  README.md  TODO  main.py  pyproject.toml  serie_a_matches.csv  test.py
model_artifacts/: best_model.keras  best_model.weights.h5  final_model.h5  final_model.keras  model_architecture.json  model_summary.txt  training_history.csv
scripts/: config.py  create_readme.sh  generate_markdown_tree.sh  getStructure.ps1  get_structure.sh  install_chrome.sh  scraper.py
src/: config.py  database.py  logger.py  main.py  match_scraper.py  migrate.py  scraper.py  transform.py  webdriver_manager.py
src/app/: Home.py
src/app/pages/: 1_Upcoming_Matches.py  2_Prediction_History.py  3_Model_Metrics.py
src/data/: database.py  schemas.py
src/ml/: models.py  predict.py  preprocess.py  train.py
src/scraper/: scraper.py  webdriver.py
