[project]
name = "soccer-match-forecast"
version = "0.1.0"
description = ""
authors = [
    { name = "Igor Nunes Patricio", email = "igornunespatricio@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pandas (>=2.3.1,<3.0.0)"]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
