[project]
name = "soccer-match-forecast"
version = "0.1.0"
description = ""
authors = [
    { name = "Igor Nunes Patricio", email = "igornunespatricio@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pandas (>=2.3.1,<3.0.0)", "lxml (>=6.0.0,<7.0.0)", "requests (>=2.32.4,<3.0.0)", "bs4 (>=0.0.2,<0.0.3)", "html5lib (>=1.1,<2.0)", "selenium (>=4.34.2,<5.0.0)", "webdriver-manager (>=4.0.2,<5.0.0)", "psycopg2-binary (>=2.9.10,<3.0.0)"]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
