[project]
name = "soccer-match-forecast"
version = "0.1.0"
description = ""
authors = [
    { name = "Igor Nunes Patricio", email = "igornunespatricio@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "html5lib (>=1.1,<2.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "imbalanced-learn (>=0.14.0,<0.15.0)",
    "tensorflow (>=2.16.0,<3.0.0)",
    "selenium (>=4.35.0,<5.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
